Implement video feed and lesson player features: Add video feed screen, lesson card, video player, user profile, Firebase integration, and update documentation

--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,9 @@ firebase_options.dart
 **/*.jks
 .env
 .env.*
+
+# Firebase service account
+serviceAccountKey.json
+
+# Node.js dependencies
+node_modules/
