--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,7 @@
-org.gradle.jvmargs=-Xmx1024m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonTransitiveRClass=false
+android.nonFinalResIds=false
 org.gradle.java.home=C:\\Users\\riley\\AppData\\Local\\Programs\\Eclipse Adoptium\\jdk-17.0.14.7-hotspot
