--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   google_sign_in: ^6.2.1
   video_player: ^2.8.2
   chewie: ^1.7.5
+  provider: ^6.1.1
+  share_plus: ^7.2.1
+  path_provider: ^2.1.5
 
 dev_dependencies:
   flutter_test:
