--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,12 +38,14 @@ dependencies:
   firebase_auth: ^5.4.1
   cloud_firestore: ^5.6.2
   firebase_storage: ^12.4.1
+  cloud_functions: ^5.0.1
   google_sign_in: ^6.2.1
   video_player: ^2.8.2
   chewie: ^1.7.5
   provider: ^6.1.1
   share_plus: ^7.2.1
   path_provider: ^2.1.5
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
