--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,7 +1,11 @@
-org.gradle.jvmargs=-Xmx2048M -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx512m -XX:+UseParallelGC -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
+android.suppressUnsupportedCompileSdk=35
+org.gradle.parallel=false
+org.gradle.daemon=false
+org.gradle.offline=true
 android.defaults.buildfeatures.buildconfig=true
-android.nonTransitiveRClass=false
+android.nonTransitiveRClass=true
 android.nonFinalResIds=false
 org.gradle.java.home=C:\\Users\\riley\\AppData\\Local\\Programs\\Eclipse Adoptium\\jdk-17.0.14.7-hotspot
