Add background service and learning mode features. Includes audio extraction, transcription services, and video player improvements.

--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,14 @@ firebase_options.dart
 **/*.jks
 .env
 .env.*
+cloud-to-text-key.json
+**/*-key.json
+**/*.pem
+**/*.key
+**/*.p12
+**/*.pfx
+**/*.cer
+**/*.crt
 
 # Firebase service account
 serviceAccountKey.json
