--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -42,6 +42,8 @@ android {
     }
 
     compileOptions {
+        // Enable Java 8 features
+        coreLibraryDesugaringEnabled true
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
@@ -59,7 +61,7 @@ android {
         applicationId "com.example.gauntlet_project_3"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdkVersion 23  // Required for Firebase Authentication
+        minSdkVersion 26  // Updated for Play Integrity support
         targetSdkVersion 35  // Android 15 (VanillaIceCream)
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
@@ -80,8 +82,15 @@ flutter {
 
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    // Add Java 8 desugaring support
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.4'
     // Import the Firebase BoM
     implementation platform('com.google.firebase:firebase-bom:32.7.1')
     // Add the dependencies for Firebase products you want to use
     implementation 'com.google.firebase:firebase-analytics'
+    // Add Play Integrity dependency
+    implementation 'com.google.firebase:firebase-appcheck-playintegrity'
+    implementation 'com.google.firebase:firebase-appcheck'
+    // Add Play Services
+    implementation 'com.google.android.gms:play-services-base:18.3.0'
 }
