--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Xmx512m -XX:+UseParallelGC -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx1024M -Dfile.encoding=UTF-8
 android.useAndroidX=true
 android.enableJetifier=true
 android.suppressUnsupportedCompileSdk=35
@@ -6,6 +6,6 @@ org.gradle.parallel=false
 org.gradle.daemon=false
 org.gradle.offline=true
 android.defaults.buildfeatures.buildconfig=true
-android.nonTransitiveRClass=true
+android.nonTransitiveRClass=false
 android.nonFinalResIds=false
 org.gradle.java.home=C:\\Users\\riley\\AppData\\Local\\Programs\\Eclipse Adoptium\\jdk-17.0.14.7-hotspot
