--- a/functions/package.json
+++ b/functions/package.json
@@ -11,19 +11,22 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "20"
+    "node": "22"
   },
   "main": "lib/index.js",
   "dependencies": {
     "@google-cloud/monitoring": "^4.1.0",
     "@google-cloud/speech": "^6.7.0",
+    "firebase": "^11.3.0",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "google-auth-library": "^9.15.1",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "@types/node": "^20.0.0",
     "eslint": "^8.9.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-import": "^2.25.4",
