--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^5.4.1
   cloud_firestore: ^5.6.2
   firebase_storage: ^12.4.1
+  firebase_app_check: ^0.3.2+2
   cloud_functions: ^5.0.1
   google_sign_in: ^6.2.1
   video_player: ^2.8.2
@@ -46,6 +47,10 @@ dependencies:
   share_plus: ^7.2.1
   path_provider: ^2.1.5
   http: ^1.2.1
+  ffmpeg_kit_flutter_full: ^6.0.3
+  flutter_background_service: ^5.0.5
+  flutter_background_service_android: ^6.2.2
+  flutter_local_notifications: ^15.1.3
 
 dev_dependencies:
   flutter_test:
