--- a/functions/package.json
+++ b/functions/package.json
@@ -17,11 +17,13 @@
   "dependencies": {
     "@google-cloud/monitoring": "^4.1.0",
     "@google-cloud/speech": "^6.7.0",
+    "dotenv": "^16.4.7",
     "firebase": "^11.3.0",
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.0.1",
     "google-auth-library": "^9.15.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "openai": "^4.83.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
