--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   google_sign_in: ^6.2.1
   video_player: ^2.8.2
   chewie: ^1.7.5
+  flick_video_player: ^0.9.0
   provider: ^6.1.1
   share_plus: ^7.2.1
   path_provider: ^2.1.5
@@ -50,7 +51,7 @@ dependencies:
   ffmpeg_kit_flutter_full: ^6.0.3
   flutter_background_service: ^5.0.5
   flutter_background_service_android: ^6.2.2
-  flutter_local_notifications: ^15.1.3
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   flutter_test:
@@ -98,12 +99,12 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Noto Sans JP
+      fonts:
+        - asset: assets/fonts/NotoSansJP-Regular.otf
+        - asset: assets/fonts/NotoSansJP-Bold.otf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
